# Adaptive-Interview-Platform-using-LLM-GAN

./: .env  .replit  app.py  pyproject.toml  replit.md
.local/state/replit/agent/filesystem/: filesystem_state.json
instance/: interview_app.db
static/css/: custom.css
templates/: analytics.html  base.html  dashboard.html  index.html
