[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-dance>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.31.0",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "flask-login>=0.6.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "numpy>=2.3.2",
    "tensorflow>=2.20.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "pydantic>=2.11.7",
    "sift-stack-py>=0.8.4",
    "sqlalchemy>=2.0.43",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "werkzeug>=3.1.3",
]
